# gymyo

./: Makefile  README.md  numpy.py  pydantic.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: engine.py  exceptions.py  physiology.py  prediction.py  progression.py
app/db/: database.py  models.py  repositories.py
app/schemas/: models.py
docs/: USAGE.md
tests/: test_engine.py  test_physiology.py  test_progression.py
web/: index.html  package.json  tsconfig.json
web/src/: App.tsx  styles.css
web/src/api/: client.ts  types.ts
web/src/components/: Layout.tsx
web/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LogSessionPage.tsx  MetricsPage.tsx  ProfilePage.tsx
