[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymyo"
version = "0.1.0"
description = "Adaptive training engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "numpy>=1.26.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
